--- a/src/references.bib
+++ b/src/references.bib
@@ -80,3 +80,17 @@
   pages         = {553–558},
   author        = {Deutsch, Josza}
 }
+@article{grover,
+  title         = {Quantum Mechanics Helps in Searching for a Needle in a Haystack},
+  volume        = {79},
+  issn          = {1079-7114},
+  url           = {http://dx.doi.org/10.1103/physrevlett.79.325},
+  doi           = {10.1103/physrevlett.79.325},
+  number        = {2},
+  journal       = {Physical Review Letters},
+  publisher     = {American Physical Society (APS)},
+  author        = {Grover,  Lov K.},
+  year          = {1997},
+  month         = jul,
+  pages         = {325–328}
+}
